--- a/intro.tex
+++ b/intro.tex
@@ -7,7 +7,12 @@
 
 The goal of this book is to communicate a certain \textit{Weltanschauung} uncovered in pieces by many different people working in bordism theory, and the goal for this introduction is to tell a story about one theorem where it is especially apparent.
 
-To begin, we will define a homology theory called \index{bordism!geometric chains}\textit{bordism homology}.  Recall that the singular homology of a space \(X\) comes about by probing \(X\) with simplices: beginning with the collection of continuous maps \(\sigma\co \Delta^n \to X\), we take the free \(\Z\)--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]  Bordism homology is constructed analogously, but using manifolds \(Z\) as the probes instead of simplices:\footnote{One does not need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.}
+To begin, we will define a homology theory called \index{bordism!geometric chains}\textit{bordism homology}.
+Recall that the singular homology of a space \(X\) comes about by probing \(X\) with simplices: beginning with the collection of continuous maps \(\sigma\co \Delta^n \to X\), we take the free \(\Z\)--module on each of these sets and construct a chain complex \[\cdots \xrightarrow{\partial} \Z\{\Delta^n \to X\} \xrightarrow{\partial} \Z\{\Delta^{n-1} \to X\} \xrightarrow{\partial} \cdots.\]
+Bordism homology is constructed analogously, but using manifolds \(Z\) as the probes instead of simplices:%
+\footnote{%
+One does not need to take the free abelian group on anything, since the disjoint union of two manifolds is already a (disconnected) manifold, whereas the disjoint union of two simplices is not a simplex.
+}
 \begin{align*}
 \cdots & \xrightarrow{\partial} \{Z^n \to X \mid \text{\(Z^n\) a compact \(n\)--manifold}\} \\
 & \xrightarrow{\partial} \{Z^{n-1} \to X \mid \text{\(Z^{n-1}\) a compact \((n-1)\)--manifold}\} \\
@@ -15,10 +20,17 @@ To begin, we will define a homology theory called \index{bordism!geometric chain
 \end{align*}
 
 \begin{lemma*}[{\cite[Section 4]{Kochman}}]
-This forms a chain complex of monoids under disjoint union of manifolds, and its homology is written \(MO_*(X)\).  These are naturally abelian groups\footnote{For instance, the inverse map comes from the cylinder construction: for a manifold \(M\), the two components of \(\partial(I \times M)\) witness the existence of an inverse to \(M\) in the bordism groups.}, and moreover they satisfy the axioms of a generalized homology theory. \qed
+This forms a chain complex of monoids under disjoint union of manifolds, and its homology is written \(MO_*(X)\).
+These are naturally abelian groups,%
+\footnote{%
+For instance, the inverse map comes from the cylinder construction: for a manifold \(M\), the two components of \(\partial(I \times M)\) witness the existence of an inverse to \(M\) in the bordism groups.
+}
+and moreover they satisfy the axioms of a generalized homology theory. \qed
 \end{lemma*}
 
-In fact, we can define a bordism theory \(MG\) for any suitable family of structure groups \(G(n) \to O(n)\).  The coefficient ring of \(MG\), or its value \(MG_*(*)\) on a point, gives the ring of \(G\)--bordism classes, and generally \(MG_*(Y)\) gives a kind of ``bordism in families over the space \(Y\)''.  There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:
+In fact, we can define a bordism theory \(MG\) for any suitable family of structure groups \(G(n) \to O(n)\).
+The coefficient ring of \(MG\), or its value \(MG_*(*)\) on a point, gives the ring of \(G\)--bordism classes, and generally \(MG_*(Y)\) gives a kind of ``bordism in families over the space \(Y\)''.
+There are comparison morphisms for the most ordinary kinds of bordism, given by replacing a chain of manifolds with an equivalent simplicial chain:
 \begin{align*}
 MO & \to H\Z/2, &
 M\SO & \to H\Z. \\
@@ -28,7 +40,8 @@ M\SO_*(*) & \to \Z,
 \end{align*}
 neither of which is very interesting, since they are both zero in positive degrees.
 
-However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.  For instance, we can use such a map to extract a theory of integration by considering the following special case of oriented bordism, where we evaluate \(M\SO_*\) on an infinite loopspace:
+However, having maps of homology theories (or, really, of spectra) is considerably more data than just the genus.
+For instance, we can use such a map to extract a theory of integration by considering the following special case of oriented bordism, where we evaluate \(M\SO_*\) on an infinite loopspace:
 \begin{align*}
 M\SO_n K(\Z, n) & = \left. \left\{ \begin{array}{c} \text{closed oriented \(n\)--manifolds} \\ \text{mapping to \(K(\Z, n)\)} \end{array} \right\} \middle/ \sim \right. \\
 & = \left. \left\{ \begin{array}{c}\text{closed oriented \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in H^n(Z; \Z)\)} \end{array}\right\} \middle/ \sim \right. .
@@ -40,17 +53,28 @@ Associated to such a representative \((Z, \omega)\), the yoga of stable homotopy
 & \xrightarrow{\mathmakebox[2.5em]{\phi \sm 1}} H\Z \sm H\Z \\
 & \xrightarrow{\mathmakebox[2.5em]{\mu}} H\Z,
 \end{align*}
-where \(\phi\) is the orientation map.  Altogether, this composite gives us an element of \(\pi_0 H\Z\), i.e., an integer.
+where \(\phi\) is the orientation map.
+Altogether, this composite gives us an element of \(\pi_0 H\Z\), i.e., an integer.
 
 \begin{lemma*}%\citeme{Where is this proven?}
 The integer obtained by the above process is \(\int_Z \omega\). \qed
 \end{lemma*}
 
-\noindent Many theorems accompany this definition of \(\int_Z \omega\) for free, entailed by the general machinery of stable homotopy theory.  The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
+\noindent Many theorems accompany this definition of \(\int_Z \omega\) for free, entailed by the general machinery of stable homotopy theory.
+The definition is also very general: given a ring map off of any bordism spectrum, a similar sequence of steps will furnish us with an integral tailored to that situation.
 
-In the case of the trivial structure group \(G = e\), this construction gives the bordism theory of stably framed manifolds, and the \index{Pontryagin--Thom construction}Pontryagin--Thom theorem amounts to an equivalence \(\S \xrightarrow{\simeq} Me\).  Through this observation, these techniques gain widespread application in stable homotopy theory: for a ring spectrum \(E\), we can reconsider the unit map as a ring map \[Me \xrightarrow{\simeq} \S \to E,\] and by following the same path of ideas we learn that \(E\) is therefore equipped with a theory of integration for framed manifolds: \[\int\co \left. \left\{ \begin{array}{c}\text{stably framed \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in E^{n-m}(Z)\)} \end{array}\right\} \middle/ \sim \right. \to \pi_m E.\]
+In the case of the trivial structure group \(G = e\), this construction gives the bordism theory of stably framed manifolds, and the \index{Pontryagin--Thom construction}Pontryagin--Thom theorem amounts to an equivalence \(\S \xrightarrow{\simeq} Me\).
+Through this observation, these techniques gain widespread application in stable homotopy theory: for a ring spectrum \(E\), we can reconsider the unit map as a ring map \[Me \xrightarrow{\simeq} \S \to E,\] and by following the same path of ideas we learn that \(E\) is therefore equipped with a theory of integration for framed manifolds: \[\int\co \left. \left\{ \begin{array}{c}\text{stably framed \(n\)--manifolds \(Z\)} \\ \text{with a specified class \(\omega \in E^{n-m}(Z)\)} \end{array}\right\} \middle/ \sim \right. \to \pi_m E.\]
 
-Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]  This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.\footnote{It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.}  Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a decreasing system of structure groups, through what stage does the unit map \(Me \to E\) factor?  For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.  Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.  Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
+Sometimes, as in the examples above, this unit map factors: \[\S \simeq Me \to MO \to H\Z/2.\]
+This is a witness to the overdeterminacy of \(H\Z/2\)'s integral for framed bordism: if the framed manifold is pushed all the way down to an unoriented manifold, there is still enough residual data to define the integral.%
+\footnote{%
+It is literally more information than this: even unframeable unoriented manifolds acquire a compatible integral.
+}
+Given any ring spectrum \(E\), we can ask the analogous question: If we filter \(O\) by a decreasing system of structure groups, through what stage does the unit map \(Me \to E\) factor?
+For instance, the map \[\S = Me \to M\SO \to H\Z\] considered above does \emph{not} factor further through \(MO\)---an orientation is \emph{required} to define the integral of an integer--valued cohomology class.
+Recognizing \(\SO \to O\) as the \(0\){\th} Postnikov--Whitehead truncation of \(O\), we are inspired to use the rest of the \index{Postnikov tower}Postnikov filtration as our filtration of structure groups.
+Here is a diagram of this filtration and some interesting minimally-factored integration theories related to it, circa 1970:
 \begin{center}
 \begin{tikzcd}
 Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\String \arrow{r} & M\Spin \arrow{r} \arrow[crossing over]{d} & M\SO \arrow{r} \arrow[crossing over]{d} & MO \arrow[crossing over]{d} \\
@@ -61,18 +85,27 @@ Me \arrow{r} \arrow{rrrd} \arrow{rrrrd} \arrow{rrrrrd} & \cdots \arrow{r} & M\St
 This is the situation homotopy theorists found themselves in some decades ago, when Ochanine and Witten proved the following mysterious theorem using analytical and physical methods:
 
 \begin{theorem*}[{Ochanine~\cite{Ochanine,OchanineEnrichmentToKO}, Witten~\cite{WittenEllipticGeneraQFT,WittenIndexDiracOperatorLoopSpace}}]\index{orientation!Witten genus}
-There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]  Moreover, if \(Z\) is a \(\Spin\) manifold such that half\footnote{It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).} its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
+There is a map of rings \[\sigma: M\Spin_* \to \C(\!(q)\!).\]
+Moreover, if \(Z\) is a \(\Spin\) manifold such that half%
+\footnote{%
+It is a special property of \(\Spin\)--manifolds that this class is always divisible by \(2\).
+}
+its first Pontryagin class vanishes---that is, if \(Z\) lifts to a \(\String\)--manifold---then \(\sigma(Z)\) lands in the subring \(MF \subseteq \Z\ps{q}\) of \index{modular form!q expansion@\(q\)--expansion}\(q\)--expansions of \index{modular form}modular forms with integral coefficients. \qed
 \end{theorem*}
 
-\noindent However, neither party gave indication that their result should be valid ``in families'', and no attendant theory of integration was formally produced.  From the perspective of a homotopy theorist, it was not clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
+\noindent However, neither party gave indication that their result should be valid ``in families'', and no attendant theory of integration was formally produced.
+From the perspective of a homotopy theorist, it was not clear what such a claim would mean: to give a topological enrichment of these theorems would mean finding a ring spectrum \(E\) such that \(E_*(*)\) had something to do with modular forms.
 
 Around the same time, Landweber, Ravenel, and Stong began studying \index{elliptic spectrum}\textit{elliptic cohomology} for independent reasons~\cite{LRS}; sometime much earlier, Morava had constructed an object ``\(K^{\Tate}\)'' associated to the \index{Tate curve}Tate elliptic curve~\cite[Section 5]{MoravaFormsOfKthy}; and a decade later Ando, Hopkins, and Strickland~\cite{AHSTheoremOfTheCube} put all these together in the following theorem:
 
 \begin{theorem*}[{\cite[Theorem 2.59]{AHSTheoremOfTheCube}}]
-If \(E\) is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra \(M\String \to E\) called the \index{sigma orientation@\(\sigma\)--orientation}\(\sigma\)--orientation (for \(E\)).  Additionally, there is an elliptic spectrum \(K^{\Tate}\) whose \(\sigma\)--orientation gives Witten's genus \(M\String_* \to K^{\Tate}_*\) . \qed
+If \(E\) is an ``elliptic cohomology theory'', then there is a canonical map of homotopy ring spectra \(M\String \to E\) called the \index{sigma orientation@\(\sigma\)--orientation}\(\sigma\)--orientation (for \(E\)).
+Additionally, there is an elliptic spectrum \(K^{\Tate}\) whose \(\sigma\)--orientation gives Witten's genus \(M\String_* \to K^{\Tate}_*\) . \qed
 \end{theorem*}
 
-We now come to the motivation for this text: the homotopical \(\sigma\)--orientation was actually first constructed using formal geometry.  The original proof of Ando--Hopkins--Strickland begins with a reduction to maps of the form \[MU[6, \infty) \to E.\]  They then work to show that in especially good cases they can complete the missing arrow in the diagram
+We now come to the motivation for this text: the homotopical \(\sigma\)--orientation was actually first constructed using formal geometry.
+The original proof of Ando--Hopkins--Strickland begins with a reduction to maps of the form \[MU[6, \infty) \to E.\]
+They then work to show that in especially good cases they can complete the missing arrow in the diagram
 \begin{center}
 \begin{tikzcd}
 MU[6, \infty) \arrow{r} \arrow{rd} & M\String \arrow[densely dotted]{d} \\
@@ -82,19 +115,42 @@ MU[6, \infty) \arrow{r} \arrow{rd} & M\String \arrow[densely dotted]{d} \\
 Leaving aside the extension problem for the moment, their main theorem is the following description of the cohomology ring \(E^* MU[6, \infty)\):
 
 \begin{theorem*}[{Ando--Hopkins--Strickland~\cite{AHSTheoremOfTheCube}, cf.\ Singer~\cite{Singer} and Stong~\cite{Stong}}]
-For \(E\) an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``\(C^3(\G_E; \sheaf I(0))\)'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle \(\sheaf I(0)\) over \(\G_E\), a certain formal group associated to \(E\).  When \(E\) is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve \(C\) and a specified isomorphism \(\G_E \cong C^\wedge_0\), the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class \(MU[6, \infty) \to E\).  This assignment is natural in the choice of elliptic \(E\). \qed
+For \(E\) an even--periodic cohomology theory, there is an isomorphism \[\Spec E_* MU[6, \infty) \cong C^3(\G_E; \sheaf I(0)),\] where ``\(C^3(\G_E; \sheaf I(0))\)'' is the affine scheme parametrizing \index{cubical structure}\textit{cubical structures} on the line bundle \(\sheaf I(0)\) over \(\G_E\), a certain formal group associated to \(E\).
+When \(E\) is taken to be elliptic, so that there is a specified \index{elliptic curve}elliptic curve \(C\) and a specified isomorphism \(\G_E \cong C^\wedge_0\), the theory of elliptic curves gives a canonical such cubical structure and hence a preferred class \(MU[6, \infty) \to E\).
+This assignment is natural in the choice of elliptic \(E\). \qed
 \end{theorem*}
 
-Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.  In the course of this text, we will work through a sequence of case studies where this perspective shines through most brightly.  In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.  We will begin by working through Thom's calculation of the homotopy of \(MO\), which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.  Having seen that through, we will then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the \(\sigma\)--orientation and its extensions.  Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
+Our real goal is to understand theorems like this last one, where algebraic geometry asserts some real control over something squarely in the domain of homotopy theory.
+In the course of this text, we will work through a sequence of case studies where this perspective shines through most brightly.
+In particular, rather than taking an optimal route to the Ando--Hopkins--Strickland result, we will use it as a gravitational slingshot to cover many anciliary topics which are also governed by the technology of formal geometry.
+We will begin by working through Thom's calculation of the homotopy of \(MO\), which holds the simultaneous attractive features of being approachable while revealing essentially all of the structural complexity of the general situation, so that we know what to expect later on.
+Having seen that through, we will then venture on to other examples: the complex bordism ring, structure theorems for finite spectra, unstable cooperations, and, finally, the \(\sigma\)--orientation and its extensions.
+Again, the overriding theme of the text will be that algebraic geometry is a good organizing principle that gives us one avenue of insight into how homotopy theory functions: it allows us to organize ``operations'' of various sorts between spectra derived from bordism theories.
 
 We should also mention that we will specifically \emph{not} discuss the following aspects of this story:
 \begin{itemize}
-\item Analytic techniques will be completely omitted.  Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, or to find a ``geometric cochains'' model of certain elliptic cohomology theories.  These often mean heavy analytic work, and we will strictly confine ourselves to the domain of homotopy theory.
-\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.  Again, much of the contemporary research about \(\tmf\) is an attempt to find a geometric model, so that geometric techniques can be imported---including equivariance and the geometry of quantum field theories, to name two.
-\item In a different direction, our focus will not linger on actually computing bordism rings \(MG_*\), nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.  This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.  This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
-\item The geometry of \(E_\infty\)--rings will also be avoided, at least to the extent possible.  Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about \(E_\infty\)--rings, and the pre--\(E_\infty\) story is not told so often these days.  So, we will focus on the unstructured part, relegate the \(E_\infty\)--rings to Appendix \ref{PowerOpnsChapter}, and leave their details to other authors.
-\item As a related note, much of the contents of this book could be thought of as computational foundations for the derived algebraic geometry of even-periodic ring spectra.  We will make absolutely no attempt to set up such a theory here, but we will endeavor to phrase our results in a way that will, hopefully, be forward-compatible with any such theory arising in the future.
-\item There will be plenty of places where we will avoid making statements in maximum generality or with maximum thoroughness.  The story we are interested in telling draws from a blend of many others from different subfields of mathematics, many of which have their own dedicated textbooks.  Sometimes this will mean avoiding stating the most beautiful theorem in a subfield in favor of a theorem we will find more useful.  Other times this will mean abbreviating someone else's general definition to one more specialized to the task at hand.  In any case, we will give references to other sources where you can find these cast in starring roles.
+\item Analytic techniques will be completely omitted.
+      Much of modern research stemming from the above problem is an attempt to extend index theory across Witten's genus, or to find a ``geometric cochains'' model of certain elliptic cohomology theories.
+      These often mean heavy analytic work, and we will strictly confine ourselves to the domain of homotopy theory.
+\item As sort of a sub-point (and despite the motivation provided in this Introduction), we will also mostly avoid manifold geometry.
+      Again, much of the contemporary research about \(\tmf\) is an attempt to find a geometric model, so that geometric techniques can be imported---including equivariance and the geometry of quantum field theories, to name two.
+\item In a different direction, our focus will not linger on actually computing bordism rings \(MG_*\), nor will we consider geometric constructions on manifolds and their behavior after imaging into the bordism ring.
+      This is also the source of active research: the structure of the symplectic bordism ring remains, to large extent, mysterious, and what we do understand of it comes through a mix of formal geometry and raw manifold geometry.
+      This could be a topic that fits logically into this document, were it not for time limitations and the author's inexpertise.
+\item The geometry of \(E_\infty\)--rings will also be avoided, at least to the extent possible.
+      Such objects become inescapable by the conclusion of our story, but there are better resources from which to learn about \(E_\infty\)--rings, and the pre--\(E_\infty\) story is not told so often these days.
+      So, we will focus on the unstructured part, relegate the \(E_\infty\)--rings to Appendix \ref{PowerOpnsChapter}, and leave their details to other authors.
+\item As a related note, much of the contents of this book could be thought of as computational foundations for the derived algebraic geometry of even-periodic ring spectra.
+      We will make absolutely no attempt to set up such a theory here, but we will endeavor to phrase our results in a way that will, hopefully, be forward-compatible with any such theory arising in the future.
+\item There will be plenty of places where we will avoid making statements in maximum generality or with maximum thoroughness.
+      The story we are interested in telling draws from a blend of many others from different subfields of mathematics, many of which have their own dedicated textbooks.
+      Sometimes this will mean avoiding stating the most beautiful theorem in a subfield in favor of a theorem we will find more useful.
+      Other times this will mean abbreviating someone else's general definition to one more specialized to the task at hand.
+      In any case, we will give references to other sources where you can find these cast in starring roles.
 \end{itemize}
 
-Finally, we must mention that there are several good companions to these notes.  Essentially none of the material here is original---it is almost all cribbed either from published or unpublished sources---but the source documents are quite scattered and individually dense.  We will make a point to cite useful references as we go.  One document stands out above all others, though: Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena}~\cite{StricklandFPFP}.  These lecture notes can basically be viewed as an attempt to make it through this paper in the span of a semester.
+Finally, we must mention that there are several good companions to these notes.
+Essentially none of the material here is original---it is almost all cribbed either from published or unpublished sources---but the source documents are quite scattered and individually dense.
+We will make a point to cite useful references as we go.
+One document stands out above all others, though: Neil Strickland's \textit{Functorial Philosophy for Formal Phenomena}~\cite{StricklandFPFP}.
+These lecture notes can basically be viewed as an attempt to make it through this paper in the span of a semester.
