--- a/preface.tex
+++ b/preface.tex
@@ -23,25 +23,175 @@
 \subsection*{Acknowledgements}
 
 
-This book owes an incredible amount to a number of incredible people.  Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.  It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.  I owe very large debts to Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care, as well as for having worked out the tail of this long story.  Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.  Mike and Neil are not far behind.  Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.  Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
+This book owes an incredible amount to a number of incredible people.
+Understanding the research program summarized here has been one of the primary pursuits---if not \emph{the} primary pursuit---of my young academic career.
+It has been an unmistakable and enormous privilege not only to be granted the time and freedom to learn about these beautiful ideas, but to also be able to do so directly from their progenitors.
+I owe very large debts to Matthew Ando, Michael Hopkins, and Neil Strickland, for each having shown me such individual attention and care, as well as for having worked out the tail of this long story.
+Matt, in particular, is the person who got me into higher mathematics, and I feel that for a decade now I have been paying forward the good will and deep friendliness that he showed me during my time at Urbana--Champaign.
+Mike and Neil are not far behind.
+Mike has been my supervisor in one sense or another for years running, in which role he has been continually encouraging and giving.
+Among other things, Neil shared with me a note of his that eventually blossomed into my thesis problem, which is an awfully nice gift to have given.
 
-Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.  By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.  It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.  He emphasized that mathematics done in isolation, rather than in maximal connection to other people, is mathematics wasted.  He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.\footnote{I have a clear memory of delivering a grad student seminar talk during my first year, where my mathematical sibling, George Melvin, asked me why $\G_m$ was called the multiplicative formal group.  I looked at him, looked at the board, and cautiously offered, ``\ldots because of the mixed term in the group law?''  Silly as it seems, this book has been significantly shaped by striving to correct for this single inarticulate incident, where it was revealed that I did not understand the original context of these tools that topologists were borrowing.  Although everyone starts learning from somewhere and not-knowing something is no cause for lasting embarrassment, it is certainly helpful to receive pushes in the direction of intellectual responsibility.  Thanks, George.}\footnote{It is, of course, up to the reader to determine whether I have actually succeeded at this, and, of course, any failure of mine in this regard can't possibly be visited upon Constantin.}
+Less directly in ideas but no less directly in stewardship, I also owe a very large debt to my Ph.D.\ adviser, Constantin Teleman.
+By the time I arrived at UC--Berkeley, I was already too soaked through with homotopy theory to develop a flavor for his sort of mathematical physics, and he nonetheless endeavored to meet me where I was.
+It was Constantin who encouraged me to put special attention into making these ideas accessible, speaking understandably, and highlighting the connections with nearby fields.
+He emphasized that mathematics done in isolation, rather than in maximal connection to other people, is mathematics wasted.
+He has very much contributed to my passion for communication and clarity, which---in addition to the literal mathematics presented here---is the main goal of this text.%
+\footnote{%
+I have a clear memory of delivering a grad student seminar talk during my first year, where my mathematical sibling, George Melvin, asked me why $\G_m$ was called the multiplicative formal group.
+I looked at him, looked at the board, and cautiously offered, ``\ldots because of the mixed term in the group law?''
+Silly as it seems, this book has been significantly shaped by striving to correct for this single inarticulate incident, where it was revealed that I did not understand the original context of these tools that topologists were borrowing.
+Although everyone starts learning from somewhere and not-knowing something is no cause for lasting embarrassment, it is certainly helpful to receive pushes in the direction of intellectual responsibility.
+Thanks, George.
+}%
+\footnote{%
+It is, of course, up to the reader to determine whether I have actually succeeded at this, and, of course, any failure of mine in this regard can't possibly be visited upon Constantin.
+}
 
-More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.  Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.  Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.  It has been an incredible treat to know him and to have received pushes from him at critical moments.  Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time and time again, in the hopes that I would someday get it.
+More broadly, the topology community has been very supportive of me as I have learned about, digested, and sometimes erroneously recapitulated the ideas of chromatic homotopy theory, tolerating me as a very loud and public learner.
+Haynes Miller, Doug Ravenel, and Steve Wilson (the $BP$ Mafia~\cite{HopkinsOnRavenel}) have all been invaluable resources: they have answered my questions tirelessly, they are each charming and friendly, they are prolific and meticulous authors, and they literally invented this subfield of mathematics.
+Jack Morava has played no smaller a role in both the discovery of chromatic homotopy theory and my own personal education.
+It has been an incredible treat to know him and to have received pushes from him at critical moments.
+Nat Stapleton and Charles Rezk also deserve special mention: power operations were among the last things that I managed to understand while writing this book, and it is an enormous credit first to their intelligence that they are so comfortable with something so bottomlessly complicated and second to their inexhaustible patience that they walked me through understanding this material time and time again, in the hopes that I would someday get it.
 
-The bulk of this book began as a set of lecture notes for a topics course\footnote{MATH 278 (159627), Spring 2016.} that I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.  The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.  In particular, this was the first time that I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.  The book also draws on feedback from lecturing in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester program in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.  Finally, my thoughts about the material in this book and its presentation were further refined by many, many, \emph{many} conversations with other students at UC--Berkeley, primarily: my undergraduate readers Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, put up with listening to me for years on end.
+The bulk of this book began as a set of lecture notes for a topics course%
+\footnote{%
+MATH 278 (159627), Spring 2016.
+}
+that I was invited to teach at Harvard University in the spring term of 2016, and I would like to thank the department for the opportunity and for the very enriching time that I spent there.
+The \emph{germ} of these notes, however, took root at the workshop \textit{Flavors of Cohomology}, organized and hosted by Hisham Sati in June 2015.
+In particular, this was the first time that I tried to push the idea of a ``context'' on someone else, which---for better or worse---has grown into the backbone of this book.
+The book also draws on feedback from lecturing in the \textit{In-Formal Groups Seminar}, which took place during the MSRI semester program in homotopy theory in the spring term of 2014, attended primarily by David Carchedi, Achim Krause, Matthew Pancia, and Sean Tilson.
+Finally, my thoughts about the material in this book and its presentation were further refined by many, many, \emph{many} conversations with other students at UC--Berkeley, primarily: my undergraduate readers Hood Chatham and Geoffrey Lee, the visiting student Catherine Ray, and my officemates Aaron Mazel-Gee and Kevin Wray---who, poor guys, put up with listening to me for years on end.
 
-This book also draws on a lot of unpublished material.  The topology community gets some flak for this reluctance to publish certain documents, but I think it is to our credit that they are made available anyway, essentially without redaction.  Reference materials of this sort which have influenced this book include: Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Charles Rezk's \textit{Elliptic Cohomology and Elliptic Curves}, as well as his \textit{Notes on the Hopkins--Miller Theorem}, and his \textit{Supplementary Notes for Math 512}; Neil Strickland's \textit{Formal Schemes for $K$--Theory Spaces} as well as his \textit{Functorial Philosophy for Formal Phenomena}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}\footnote{This earlier version contains a lot of information that didn't make it to publication, as the referee (perhaps rightly) found it too dense to make heads or tails of.  Once the reader already has the sketch of the argument established, however, the original version is a truly invaluable resource to go back and re-read.}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures\footnote{There is a bit of a funny story here: none of the authors of this article could find their own preprint, but a graduate student had held on to a paper copy.  In their defense, two decades had passed---but that in turn only makes Gerd's organizational skills more heroic.}.  I would not have understood the material presented here without access to these resources, nevermind the supplementary guidance.
+This book also draws on a lot of unpublished material.
+The topology community gets some flak for this reluctance to publish certain documents, but I think it is to our credit that they are made available anyway, essentially without redaction.
+Reference materials of this sort which have influenced this book include:
+    Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups};
+    Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks};
+    Jacob Lurie's \textit{Chromatic Homotopy (252x)};
+    Haynes Miller's \textit{Notes on Cobordism};
+    Charles Rezk's \textit{Elliptic Cohomology and Elliptic Curves},
+        as well as his \textit{Notes on the Hopkins--Miller Theorem},
+        and his \textit{Supplementary Notes for Math 512};
+    Neil Strickland's \textit{Formal Schemes for $K$--Theory Spaces}
+        as well as his \textit{Functorial Philosophy for Formal Phenomena};
+    the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube};%
+\footnote{%
+        This earlier version contains a lot of information that didn't make it to publication, as the referee (perhaps rightly) found it too dense to make heads or tails of.
+        Once the reader already has the sketch of the argument established, however, the original version is a truly invaluable resource to go back and re-read.
+}
+    and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures.%
+\footnote{%
+        There is a bit of a funny story here: none of the authors of this article could find their own preprint, but a graduate student had held on to a paper copy.
+        In their defense, two decades had passed---but that in turn only makes Gerd's organizational skills more heroic.
+}
+I would not have understood the material presented here without access to these resources, nevermind the supplementary guidance.
 
-In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{spectralsequences}), Dexter Chua (an outside consultant who translated the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber, who provided a mountain of valuable feedback, and who came up with the book's clever epigraph), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I may never have tried to understand without his insistence that I speak about it and his further help in preparing that talk).
+In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.
+These contributors are:
+    Eva Belmont,
+    Hood Chatham (especially his marvelous spectral sequence package, \texttt{spectralsequences}),
+    Dexter Chua (an outside consultant who translated the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber, who provided a mountain of valuable feedback, and who came up with the book's clever epigraph),
+    Arun Debray (a student at UT--Austin),
+    Jun Hou Fung,
+    Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}),
+    Mauro Porta,
+    Krishanu Sankar,
+    Danny Shi,
+    and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I may never have tried to understand without his insistence that I speak about it and his further help in preparing that talk).
 
-More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a \emph{very} bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.\footnote{Between him and Dorin, I do wonder if there's a Fossey-esque novel in the works: \textit{Topologists in the Mist}.  I hope we came across as gentle creatures, uncannily similar to proper mathematicians once they got to know us.}
+More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester:
+    Colin Aitken,
+    Adam Al-Natsheh,
+    \textbf{Eva Belmont},
+    Jason Bland,
+    Dorin Boger,
+    \textbf{Lukas Brantner},
+    \textbf{Christian Carrick},
+    \textbf{Hood Chatham},
+    David Corwin,
+    \textbf{Jun Hou Fung},
+    \textbf{Meng Guo},
+    \textbf{Jeremy Hahn},
+    Changho Han,
+    Chi-Yun Hsu,
+    \textbf{Erick Knight},
+    Benjamin Landon,
+    Gabriel Long,
+    Yusheng Luo,
+    Jake Marcinek,
+    \textbf{Jake McNamara},
+    \textbf{Akhil Mathew},
+    Max Menzies,
+    Morgan Opie,
+    Alexander Perry,
+    Mauro Porta,
+    \textbf{Krishanu Sankar},
+    \textbf{Jay Shah},
+    Ananth Shankar,
+    \textbf{Danny Shi},
+    Koji Shimizu,
+    Geoffrey Smith,
+    Hunter Spinik,
+    Philip Tynan,
+    Yi Xie,
+    David Yang,
+    Zijian Yao,
+    Lynnelle Ye,
+    Chenglong Yu,
+    \textbf{Allen Yuan},
+    Adrian Zahariuc,
+    Yifei Zhao,
+    Rong Zhou,
+    and
+    Yihang Zhu.
+Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.
+As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.
+They're a \emph{very} bright group.
+Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.%
+\footnote{%
+Between him and Dorin, I do wonder if there's a Fossey-esque novel in the works: \textit{Topologists in the Mist}.
+I hope we came across as gentle creatures, uncannily similar to proper mathematicians once they got to know us.
+}
 
-On top of the students, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Tilman Bauer, Jonathan Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Joe Harris, Mike Hill, Nitu Kitchloo, Johan Konter, Achim Krause, Akhil Mathew, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Emily Riehl, Andrew Senger, Robert Smith, Reuben Stern, Sean Tilson, Dylan Wilson, and Steve Wilson.  Of course, Matt Ando, Mike Hopkins, and Nat Stapleton deserve further special mention as direct contributors of their respective sections.  Additionally, the referees and the publishers themselves have been enormously helpful in editing this into a passable document.
+On top of the students, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.
+Such helpful people include:
+    Tobias Barthel,
+    Tilman Bauer,
+    Jonathan Beardsley,
+    Martin Bendersky,
+    Sanath Devalapurkar,
+    Ben Gadoua,
+    Joe Harris,
+    Mike Hill,
+    Nitu Kitchloo,
+    Johan Konter,
+    Achim Krause,
+    Akhil Mathew,
+    Pedro Mendes de Araujo,
+    Denis Nardin,
+    Justin Noel,
+    Sune Precht Reeh,
+    Emily Riehl,
+    Andrew Senger,
+    Robert Smith,
+    Reuben Stern,
+    Sean Tilson,
+    Dylan Wilson,
+    and
+    Steve Wilson.
+Of course, Matt Ando, Mike Hopkins, and Nat Stapleton deserve further special mention as direct contributors of their respective sections.
+Additionally, the referees and the publishers themselves have been enormously helpful in editing this into a passable document.
 
-Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be half the open and vibrant person that I am today, and I would know so much less of myself.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
+Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.
+She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.
+Without her compassion, tenderness, and understanding I would not be half the open and vibrant person that I am today, and I would know so much less of myself.
+It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
 
-Thanks to my many friends here, and thanks also to Thomas Dunning especially.  Thanks, everyone.  Theveryone.
+Thanks to my many friends here, and thanks also to Thomas Dunning especially.
+Thanks, everyone.
+Theveryone.
 
 \vspace{2\baselineskip}
 \hspace{3em} ------------Eric
@@ -57,13 +207,36 @@ Thanks to my many friends here, and thanks also to Thomas Dunning especially.  T
 
 \subsection*{Changes since publication}
 
-It has now been some years since the publication of this text, and it has been very gratifying to see the uptick in readers' interest in this subject.  Of course, increased interest also brings with it corrections and addenda.  I would particularly like to thank Jonathan Beardsley, Robert Burklund, Shachar Carmeli, Jeremy Hahn, Yigal Kamel, Kiran Luecke, Jeroen van der Meer, Piotr Pstr\k{a}gowski, Charles Rezk, John Rognes, Bruno Stonek, Timon Tausendpfund, Paul VanKoughnett, and Allen Yuan for their insightful questions and contributions to the continued health of this document.  While most of the changes have been minor, the major differences from the published version are:
+It has now been some years since the publication of this text, and it has been very gratifying to see the uptick in readers' interest in this subject.
+Of course, increased interest also brings with it corrections and addenda.
+I would particularly like to thank
+    Jonathan Beardsley,
+    Robert Burklund,
+    Shachar Carmeli,
+    Jeremy Hahn,
+    Yigal Kamel,
+    Kiran Luecke,
+    Jeroen van der Meer,
+    Piotr Pstr\k{a}gowski,
+    Charles Rezk,
+    John Rognes,
+    Bruno Stonek,
+    Timon Tausendpfund,
+    Paul VanKoughnett,
+    and
+    Allen Yuan
+for their insightful questions and contributions to the continued health of this document.
+While most of the changes have been minor, the major differences from the published version are:
 
 \begin{itemize}
-    \item There were a pair of mutually cancelling errors in \Cref{StabilizingTheMUSteenrodOps}: the calculation leading up to \Cref{AjAndBjAreInTheFGLSubring} mistook the permutation representation for the reduced permutation representation, and so was missing a factor of \(x\); and \Cref{PCnOnUniversalMUClasses} was argued incorrectly, which hid this previous error.  These have both now been corrected.
-    \item \Cref{SectionMfgSmallScales} now makes careful distinction between the Lubin--Tate substack and the moduli of factorizations through it, or ``Lubin--Tate cover''.  It also newly uses the Kodaira--Spencer map to justify the precise form of the deformation complex; unfortunately, this modified some of the theorem numbering in this section.
-    \item \Cref{UnstableContextsSection} now contains figures depicting the \(E_2\)--pages of some unstable \(\HFtwo\)--Adams spectral sequences.  These do not play into the main text, but the reader may find them intriguing all the same.
-    \item \Cref{JuvitopTalkSection} now includes most of the noncalculational details of the construction of the \(\String\)--orientation of \(\TMF\).  We have also expanded on the details of the lemmas concerning \(E_\infty\)--ring mapping spaces sourced on a Thom spectrum.
+    \item There were a pair of mutually cancelling errors in \Cref{StabilizingTheMUSteenrodOps}: the calculation leading up to \Cref{AjAndBjAreInTheFGLSubring} mistook the permutation representation for the reduced permutation representation, and so was missing a factor of \(x\); and \Cref{PCnOnUniversalMUClasses} was argued incorrectly, which hid this previous error.
+          These have both now been corrected.
+    \item \Cref{SectionMfgSmallScales} now makes careful distinction between the Lubin--Tate substack and the moduli of factorizations through it, or ``Lubin--Tate cover''.
+          It also newly uses the Kodaira--Spencer map to justify the precise form of the deformation complex; unfortunately, this modified some of the theorem numbering in this section.
+    \item \Cref{UnstableContextsSection} now contains figures depicting the \(E_2\)--pages of some unstable \(\HFtwo\)--Adams spectral sequences.
+          These do not play into the main text, but the reader may find them intriguing all the same.
+    \item \Cref{JuvitopTalkSection} now includes most of the noncalculational details of the construction of the \(\String\)--orientation of \(\TMF\).
+          We have also expanded on the details of the lemmas concerning \(E_\infty\)--ring mapping spaces sourced on a Thom spectrum.
 \end{itemize}
 
 
